--- a/jupyter-notebook/Email_Network_and_Stats.ipynb
+++ b/jupyter-notebook/Email_Network_and_Stats.ipynb
@@ -288,14 +288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PROYECTED SSO NETWORK\n",
+      "EMAIL NETWORK\n",
       "Connected Network: True\n",
       "Number of Nodes: 1133\n",
       "Number of Edges: 5452\n",
@@ -319,7 +319,7 @@
     "Diameter = nx.diameter(G)\n",
     "\n",
     "print(\n",
-    "    \"PROYECTED SSO NETWORK\" + '\\n'\n",
+    "    \"EMAIL NETWORK\" + '\\n'\n",
     "        \"Connected Network: \" + str(Connected_Network) +'\\n'\n",
     "        \"Number of Nodes: \"+ str(Number_of_Nodes) +'\\n'\n",
     "        \"Number of Edges: \"+ str(Number_of_Edges) +'\\n'\n",
